<resources>
    <string name="app_name">Shop List</string>
    <string name="title_create_account">Create Account</string>
    <string name="pager_title_shopping_lists">Shopping Lists</string>
    <string name="pager_title_meals">Meals</string>

    <string name="hint_title">Title</string>
    <string name="button_create">Create</string>
    <string name="button_edit">edit</string>
    <string name="created_by_label">created by&#160;</string>
    <string name="last_changed_label">last changed at&#160;</string>
    <string name="edit_menu_item_label">Edit</string>
    <string name="remove_menu_item">remove</string>
    <string name="log_out_menu_item">log out</string>
    <string name="message_removing">Are you sure you want to remove this item?</string>
    <string name="dialog_title_remove">Remove shopping list</string>
    <string name="bought_by">Bought by %1$s</string>
    <string name="i_do_shopping">I\'m doing shopping</string>
    <string name="one_shopper">%1$s shopper</string>
    <string name="more_than_one_shopper">%1$s shoppers</string>

    <!--HINTS-->
    <string name="hint_user_name">Your name</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_password">Password</string>
    <string name="btn_create_account">create account</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="sign_in_label">Already have an account?</string>
    <string name="sign_up_label">Don\'t have an account?</string>

    <string name="users_list_title">%1$s\'s&#160; lists</string>
</resources>
